--- a/source/index.html
+++ b/source/index.html
@@ -40,11 +40,11 @@
           <p class="first-screen__description">
              Занялся собой? Займись котом
           </p>
-          <button class="first-screen__button">
-            <a href="form.html">
-              Подобрать программу
+            <a class="first-screen__button" href="form.html">
+              Подбор программы
             </a>
-          </button>
+
+
         </div>
       </section>
       <section class="programm">
@@ -106,21 +106,22 @@
             </div>
             <p class="result__cost">Затраты на питание: 15 000 РУБ.</p>
             <div class="result__photo">
-              <img src="img/viewport=mobile.jpg">
+              <img src="img/viewport=mobile.jpg" alt="слайдер до-после">
             </div>
           </div>
         </div>
       </section>
-      <section class="contacts">
-        <h2 class="contacts__title">приглашаем к сотрудничеству дилеров!</h2>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </section>
-      <section class="map">
 
-      </section>
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
+        <section class="contacts">
+          <h3 class="contacts__title">приглашаем к сотрудничеству дилеров!</h3>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </section>
+        <section class="map">
+
+        </section>
         <div class="footer__logo">
           <a class="header__logo" href="index.html">
             <img src="img/footer-logo.png" alt="Cat Energy">
