--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Cat Energy</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="header">
@@ -37,15 +38,11 @@
           <h2 class="first-screen__title">
             Функциональное питание для котов
           </h2>
-          <p class="first-screen__description">
-             Занялся собой? Займись котом
-          </p>
-            <a class="first-screen__button" href="form.html">
-              Подбор программы
-            </a>
-
-
+          <p class="first-screen__description">Занялся собой? Займись котом<p>
         </div>
+        <a class="first-screen__button" href="form.html">
+          Подбор программы
+        </a>
       </section>
       <section class="programm">
         <h2 class="visually-hidden">Наши программы</h2>
@@ -75,7 +72,7 @@
       <section class="how">
         <div class="how__wrapper">
           <h2 class="how__title">Как это работает</h2>
-          <ol class="how__list">
+          <ul class="how__list">
             <li class="list__item item__healthy-diet">
               Функциональное питание содержит только полезные питательные вещества.
             </li>
@@ -88,7 +85,7 @@
             <li class="list__item item__scales">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </li>
-          </ol>
+          </ul>
         </div>
       </section>
       <section class="sample">
@@ -111,17 +108,16 @@
           </div>
         </div>
       </section>
-
+      <section class="contacts">
+        <h3 class="contacts__title">приглашаем к сотрудничеству дилеров!</h3>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </section>
+      <section class="map">
+        <iframe src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&utm_source=main_stripe_big&z=17.09" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
-        <section class="contacts">
-          <h3 class="contacts__title">приглашаем к сотрудничеству дилеров!</h3>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        </section>
-        <section class="map">
-          <iframe src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&utm_source=main_stripe_big&z=17.09" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
-        </section>
         <div class="footer__logo">
           <a class="header__logo" href="index.html">
             <img src="img/footer-logo.png" alt="Cat Energy">
