--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
         <img src="img/logo-desktop.svg" alt="Cat Energy">
       </a>
       <nav class="nav">
-        <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="nav__toggle  burger" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="nav__list">
           <li class="list__item">
             <a href="index.html">
