--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
         <img src="img/logo-desktop.svg" alt="Cat Energy">
       </a>
       <nav class="nav">
-        <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="nav__toggle burger" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="nav__list">
           <li class="list__item list__item--active">
             <a href="#">
@@ -35,10 +35,12 @@
       <h1 class="visually-hidden">Cat Energy-здоровому коту здоровое питание</h1>
       <section class="first-screen">
         <div class="first-screen__wrapper">
-          <h2 class="first-screen__title">
-            Функциональное питание для котов
-          </h2>
-          <p class="first-screen__description">Занялся собой? Займись котом<p>
+          <div class="first-screen__opacity">
+            <h2 class="first-screen__title">
+              Функциональное питание для котов
+            </h2>
+            <p class="first-screen__description">Занялся собой? Займись котом<p>
+          </div>
         </div>
         <a class="first-screen__button" href="form.html">
           Подбор программы
@@ -94,12 +96,12 @@
           <p class="sample__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
           <div class="sample__result">
             <div class="result__weight">
-              <p class="result__weight-title">снижение веса</p>
-              <p class="result__weight-description">5 КГ</p>
+              <p class="result__title">снижение веса</p>
+              <p class="result__description">5 КГ</p>
             </div>
             <div class="result__time">
-              <p class="result__time-title">затрачено времени</p>
-              <p class="result__time-description">60 ДНЕЙ</p>
+              <p class="result__title">затрачено времени</p>
+              <p class="result__description">60 ДНЕЙ</p>
             </div>
             <p class="result__cost">Затраты на питание: 15 000 РУБ.</p>
             <div class="result__photo">
