--- a/source/index.html
+++ b/source/index.html
@@ -74,7 +74,7 @@
       <section class="how">
         <div class="how__wrapper">
           <h2 class="how__title">Как это работает</h2>
-          <ul class="how__list">
+          <ol class="how__list">
             <li class="list__item item__healthy-diet">
               Функциональное питание содержит только полезные питательные вещества.
             </li>
@@ -87,7 +87,7 @@
             <li class="list__item item__scales">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </li>
-          </ul>
+          </ol>
         </div>
       </section>
       <section class="sample">
