--- a/source/catalog.html
+++ b/source/catalog.html
@@ -182,7 +182,7 @@
       <section class="catalog-extra">
         <div class="catalog-extra__wrapper">
           <h2 class="catalog-extra__title">Дополнительные товары</h2>
-          <ol class="catalog-extra__list">
+          <ul class="catalog-extra__list">
             <li class="catalog-extra__item">
               <h3 class="catalog-extra__item-title">Сахарозаменитель</h3>
               <p class="catalog-extra__description">1 упаковка (100 г)</p>
@@ -207,7 +207,7 @@
               <p class="catalog-extra__price">300 ₽</p>
               <button class="catalog-extra__order">заказать</button>
             </li>
-          </ol>
+          </ul>
           <div class="catalog-extra__gift">
             <div class="catalog-extra__gift-opasity">
               <img class="catalog-extra__gift-icon" src="./img/icon-gift.svg" alt="подарок">
