--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
       </a>
       <nav class="nav">
         <button class="nav__toggle burger" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="nav__list">
+        <ul class="nav__list ul-reset">
           <li class="list__item list__item--active">
             <a href="#">
               Главная
@@ -74,7 +74,7 @@
       <section class="how">
         <div class="how__wrapper">
           <h2 class="how__title">Как это работает</h2>
-          <ol class="how__list">
+          <ol class="how__list ul-reset">
             <li class="list__item item__healthy-diet">
               Функциональное питание содержит только полезные питательные вещества.
             </li>
@@ -126,7 +126,7 @@
           </a>
         </div>
         <div class="footer__social social">
-          <ul class="social__list">
+          <ul class="social__list ul-reset">
             <li class="social__item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
             </li>
