--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,7 +36,7 @@
       <section class="cards-field">
         <h2 class="visually-hidden">Товары в наличии</h2>
         <div class="cards-field__wrapper">
-          <ul class="card__product-list">
+          <ul class="card__product-list ul-reset">
             <li class="card__product-item">
               <img class="card__product-image" src="./img/catalog-1-desktop.png" alt="Изображение товара">
               <p class="card__product-name">Cat Energy PRO 500 г</p>
@@ -182,7 +182,7 @@
       <section class="catalog-extra">
         <div class="catalog-extra__wrapper">
           <h2 class="catalog-extra__title">Дополнительные товары</h2>
-          <ul class="catalog-extra__list">
+          <ul class="catalog-extra__list ul-reset">
             <li class="catalog-extra__item">
               <h3 class="catalog-extra__item-title">Сахарозаменитель</h3>
               <p class="catalog-extra__description">1 упаковка (100 г)</p>
