--- a/source/form.html
+++ b/source/form.html
@@ -37,7 +37,7 @@
           <h1 class="form-container__title">Подбор программы</h1>
           <p class="form-container__user-data">Заполните анкету, и мы подберем программу питания для вашего кота</p>
           <form class="form-container registry" action="https://echo.htmlacademy.ru" method="post">
-            <ul class="registry__list">
+            <ul class="registry__list ul-reset">
               <li class="registry__item">
                 <label class="registry__field">
                   <span class="registry__field-label">ИМЯ:*</span>
@@ -145,7 +145,7 @@
           </a>
         </div>
         <div class="footer__social social">
-          <ul class="social__list">
+          <ul class="social__list ul-reset">
             <li class="social__item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
             </li>
